Updated link and description of myself

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             
             <div class="info-item">
                 <h4 class="info-title">Me</h4>
-                <p>I spend my days exercising/playing football, working in Software Development and studying to become a Penetration Tester. From time to time I write about the latter in my <a href="https://mrcopy.github.io">blog</a>.</p>
+                <p>My name is Lautaro Colombo. My main career interests are Penetration Testing and Adversarial Simulation. From time to time I write about these subjects in my <a href="https://mrcopy.github.io">blog</a>.</p>
             </div>
 
             <div class="info-item">
@@ -46,6 +46,7 @@
                     <li><a href="https://twitter.com/mrcopy_" target="_blank"><span class="social">Twitter </span></a></li>
                     <li><a href="https://www.linkedin.com/in/lautarocolombo" target="_blank"><span class="social">Linkedin </span></a></li>
                   <li><a href="https://mrcopy.github.io" target="_blank"><span class="social">Blog </span></a></li>
+                  <li><a href="https://github.com/mrcopy" target="_blank"><span class="social">Github </span></a></li>
                 </ul>
             </div>
         </div>
