Added public key and link modified

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <div class="info-item">
                 <h4 class="info-title">Wanna get in touch with me?</h4>
-                <p><a href="mailto:lautaro@lautarocolombo.com">Email.</a> Here's my <a href="public.key">pgp.</a></p>
+                <p><a href="mailto:lautaro@lautarocolombo.com">Email.</a> Here's my <a href="key.asc">pgp.</a></p>
                 <p>Have my number? Use <a href="https://signal.org/">Signal.</a></p>
             </div>
 
