--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             
             <div class="info-item">
                 <h4 class="info-title">Me</h4>
-                <p>My name is Lautaro Colombo. My main career interests are Penetration Testing and Adversarial Simulation. From time to time I write about these subjects in my <a href="https://mrcopy.gitlab.io">blog</a>.</p>
+                <p>My name is Lautaro Colombo. My main career interests are Software Development and Pentesting. From time to time I write about these subjects in my <a href="https://mrcopy.gitlab.io">blog</a>.</p>
             </div>
 
             <div class="info-item">
